--- a/DemoMaui/MainPage.xaml
+++ b/DemoMaui/MainPage.xaml
@@ -45,5 +45,16 @@
     </FlexLayout>-->
 
 
-    <Label Text="Hello World!" TextColor="Red" FontSize="30" FontAttributes="Bold" BackgroundColor="Green" HorizontalTextAlignment="Center" VerticalTextAlignment="Center" HorizontalOptions="Center" VerticalOptions="Center"/>
+    <Label Text="Hello World! Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book." 
+           TextColor="Red" 
+           MaxLines="5"
+           FontSize="30"
+           FontAttributes="Bold"
+           BackgroundColor="Green" 
+           HorizontalTextAlignment="Center" 
+           VerticalTextAlignment="Center"
+           HorizontalOptions="Center"
+           VerticalOptions="Center"/>
+    
+    
 </ContentPage>
