--- a/DemoMaui/MainPage.xaml
+++ b/DemoMaui/MainPage.xaml
@@ -43,7 +43,7 @@
         <BoxView WidthRequest="100" HeightRequest="100" BackgroundColor="Yellow"></BoxView>
 
     </FlexLayout>-->
-    <VerticalStackLayout VerticalOptions="Center">
+    <!--<VerticalStackLayout VerticalOptions="Center">
 
         <Label x:Name="btnLorem" Text="Hello World! Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book." 
            TextColor="Red" 
@@ -57,12 +57,14 @@
            VerticalOptions="Center"/>
 
         <Label Text="Click!" HorizontalOptions="Center" FontSize="60" Background="#FF3200" TextColor="White" Padding="10">
-            <Label.GestureRecognizers><!--Hareket tanımlama işlemidir(izleme/dokunma)-->
+            <Label.GestureRecognizers>--><!--Hareket tanımlama işlemidir(izleme/dokunma)--><!--
                 <TapGestureRecognizer Tapped="Click_Tapped"/>
             </Label.GestureRecognizers>
         </Label>
         
-    </VerticalStackLayout>
+    </VerticalStackLayout>-->
 
+
+    <Button Text="Click Me!" Clicked="Button_Clicked"/>
 
 </ContentPage>
