#Frame inside Image element

--- a/DemoMaui/MainPage.xaml
+++ b/DemoMaui/MainPage.xaml
@@ -76,9 +76,22 @@
                 Padding="30"
                 ImageSource="dotnet_bot.png"/>
     </StackLayout>-->
-    <Image Source="avatar.jpg" 
+
+    <Frame HorizontalOptions="Center" 
+           VerticalOptions="Center"
+           Padding="0"
+           HasShadow="True"
+           CornerRadius="100"
+           HeightRequest="200"
+           WidthRequest="200"
+           IsClippedToBounds="True"
+           BackgroundColor="Red">
+
+       
+        <Image Source="avatar.jpg" 
             HorizontalOptions="Center" 
              VerticalOptions="Center"
              Aspect="AspectFill"
-              Opacity="0.4"/>
+              Opacity="0.9"/>
+    </Frame>
 </ContentPage>
